--- a/src/_header.html
+++ b/src/_header.html
@@ -65,13 +65,13 @@
                 <nav class="header__submenu">
                   <ul class="header__submenu-navbar">
                     <li class="header__submenu-nav">
-                      <a href="#" class="header__submenu-nav-link">Кардио фитнес</a>
+                      <a href="class-single-cardio.html" class="header__submenu-nav-link">Кардио фитнес</a>
                     </li>
                     <li class="header__submenu-nav">
-                      <a href="class-single-pilates.html" class="header__submenu-nav-link">Пилатес</a>
+                      <a href="class-single-crossfit.html" class="header__submenu-nav-link">Кроссфит</a>
                     </li>
                     <li class="header__submenu-nav">
-                      <a href="#" class="header__submenu-nav-link">Аэробика</a>
+                      <a href="class-single-aerobics.html" class="header__submenu-nav-link">Аэробика</a>
                     </li>
                   </ul>
                 </nav>
