--- a/src/contact.html
+++ b/src/contact.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact</title>
+  <title>Контакты</title>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400;1,600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.min.css" />
 
 </head>
@@ -25,13 +26,13 @@
       </iframe>
     </div>
   </section>
-  <main class="contact__main">
+  <main class="main contact__main">
     <section class="contact-info">
       <div class="container">
         <div class="contact-info__wrapper">
           <div class="message">
-            <p class="message__title">send us a message</p>
-            <p class="message__subtitle">We are an independent gym that is committed to working with you to gain the results you. want.</p>
+            <p class="message__title">Напишите нам!</p>
+            <p class="message__subtitle">Мы стремимся работать с вами для достижения ваших результатов.</p>
             <form action="#" class="message__form">
               <input type="text" class="message__input" placeholder="ИМЯ" required
               >
@@ -40,13 +41,13 @@
               <input type="text" class="message__input" placeholder="ГОРОД" required
               >
               <textarea class="message__area" name="message__area" id="message" cols="30" rows="10" placeholder="КОММЕНТАРИЙ"></textarea>
-              <button class="message__btn">Submit your message</button>
-              <p class="message__valid">Make sure you put a valid email.</p>
+              <button class="message__btn">Подтвердить</button>
+              <p class="message__valid">Убедитесь, что вы указали действующий адрес электронной почты.</p>
             </form>
           </div>
           <div class="info">
-            <p class="info__title">Contact info</p>
-            <p class="info__text">Ut volutpat consectetur aliquam. Curabitur auctor in nis ulum ornare. Sed consequat, augue condimentum fermentum gravida, metus elit vehicula dui. </p>
+            <p class="info__title">Контакты</p>
+            <p class="info__text">МЫ РАДЫ ОТВЕТИТЬ НА ЛЮБОЙ ВАШ ВОПРОС, ВЫСЛУШАТЬ ВАШЕ ПРЕДЛОЖЕНИЕ ИЛИ ЗАМЕЧАНИЕ</p>
             <a href="tel: 19003429876" class="info__phone">
               <svg class="info__phone-icon">
                 <use xlink:href="img/icons/icons.svg#smartphone"></use>
@@ -67,60 +68,60 @@
       <div class="container">
         <div class="contact-content__wrapper">
           <div class="schedule schedule--contact">
-            <h3 class="schedule__title">Opening Hours</h3>
+            <h3 class="schedule__title">Часы работы</h3>
             <ul class="schedule__list">
               <li class="schedule__day">
                 <svg class="schedule__calendar-icon">
                   <use xlink:href="img/icons/icons.svg#calendar"></use>
                 </svg>
-                <p class="schedule__day-name">Monday</p>
+                <p class="schedule__day-name">Понедельник</p>
                 <p class="schedule__time">6:00 - 24:00</p>
               </li>
               <li class="schedule__day">
                 <svg class="schedule__calendar-icon">
                   <use xlink:href="img/icons/icons.svg#calendar"></use>
                 </svg>
-                <p class="schedule__day-name">Monday</p>
+                <p class="schedule__day-name">Вторник</p>
                 <p class="schedule__time">6:00 - 24:00</p>
               </li>
               <li class="schedule__day">
                 <svg class="schedule__calendar-icon">
                   <use xlink:href="img/icons/icons.svg#calendar"></use>
                 </svg>
-                <p class="schedule__day-name">Monday</p>
+                <p class="schedule__day-name">Среда</p>
                 <p class="schedule__time">6:00 - 24:00</p>
               </li>
               <li class="schedule__day">
                 <svg class="schedule__calendar-icon">
                   <use xlink:href="img/icons/icons.svg#calendar"></use>
                 </svg>
-                <p class="schedule__day-name">Monday</p>
+                <p class="schedule__day-name">Четверг</p>
                 <p class="schedule__time">6:00 - 24:00</p>
               </li>
               <li class="schedule__day">
                 <svg class="schedule__calendar-icon">
                   <use xlink:href="img/icons/icons.svg#calendar"></use>
                 </svg>
-                <p class="schedule__day-name">Monday</p>
+                <p class="schedule__day-name">Пятница</p>
                 <p class="schedule__time">6:00 - 24:00</p>
               </li>
               <li class="schedule__day">
                 <svg class="schedule__calendar-icon">
                   <use xlink:href="img/icons/icons.svg#calendar"></use>
                 </svg>
-                <p class="schedule__day-name">Monday</p>
+                <p class="schedule__day-name">Суббота</p>
                 <p class="schedule__time">6:00 - 24:00</p>
               </li>
               <li class="schedule__day">
                 <svg class="schedule__calendar-icon">
                   <use xlink:href="img/icons/icons.svg#calendar"></use>
                 </svg>
-                <p class="schedule__day-name">Monday</p>
+                <p class="schedule__day-name">Воскресенье</p>
                 <p class="schedule__time">6:00 - 24:00</p>
               </li>
             </ul>
-            <p class="schedule__info">Nam vestibulum, arcu sodales feugiat consectetur, nisl orci bibendum elit.</p>
-            <p class="schedule__subtext">Enjoy it!</p>
+            <p class="schedule__info">Мы всегда стараемся быть на шаг впереди!</p>
+            <p class="schedule__subtext">Присоединяйся к GYM!</p>
           </div>
           <div class="contact-content__events">
             @@include('_events.html')
@@ -130,11 +131,11 @@
           </div>
           <div class="join__join join__join--contact">
             <div class="join__join-info">
-              <h3 class="join__join-title">WHY JOIN?</h3>
-              <p class="join__join-subtitle">This is an awesome subhead</p>
-              <p class="join__join-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+              <h3 class="join__join-title">Подпишитесь</h3>
+              <p class="join__join-subtitle">И будьте в курсе новинок фитнеса</p>
+              <p class="join__join-text">Стать здоровым и активным просто. Для этого достаточно приобрести абонемент фитнес-клуба GYM. Тем более, что на клубные карты действует система скидок.</p>
             </div>
-            <button class="join__join-btn">Join Today</button>
+            <button class="join__join-btn">Присоединиться</button>
           </div>
         </div>
       </div>
