--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gymsport</title>
+  <title>GYM</title>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
@@ -24,7 +24,7 @@
         <p class="upperheader__info-text">Сеть фитнес клубов GYM является экспертом в области фитнеса. Большой выбор спортивного оборудования открывает Вам возможности физического развития в любом направлении
         </p>
       </div>
-      <a href="#" class="button-link upperheader__button-link">
+      <a href="about.html" class="button-link upperheader__button-link">
         <span>О нас</span>
       </a>
     </div>
@@ -35,7 +35,7 @@
     </a>
   </section>
   @@include('_header.html')
-  <main class="main">
+  <main class="main main-index">
     <section class="main__title">
       <div class="container">
         <div class="main__title-wrapper">
