--- a/src/pricing.html
+++ b/src/pricing.html
@@ -18,7 +18,7 @@
   <body>
     @@include('_header.html')
     <section class="underheader-bg underheader-bg--pricing"></section>
-    <main class="pricing-main">
+    <main class="main pricing-main">
       <section class="pricing-plans">
         <div class="container">
           <div class="pricing-plans__wrapper">
@@ -42,43 +42,51 @@
                 <a href="#" class="pricing-block__btn">Приобрести</a>
               </div>
               <div class="pricing-block">
-                <p class="pricing-block__uppertitle">ONE DAY TRAINING</p>
-                <h3 class="pricing-block__price">Free</h3>
+                <p class="pricing-block__uppertitle">Индивидуальный</p>
+                <h3 class="pricing-block__price">
+                  7000
+                  <span>р/мес</span>
+                </h3>
                 <ul class="pricing-block__list">
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
+                  <li class="pricing-block__prefs">Фитнес-тестирование</li>
+                  <li class="pricing-block__prefs">Инструктаж во всех залах</li>
+                  <li class="pricing-block__prefs">Посещение в любое время</li>
+                  <li class="pricing-block__prefs">
+                    Оплата помесячно</li>
+                  <li class="pricing-block__prefs">
+                    Скидка 5% на СПА</li>
                 </ul>
-                <a href="#" class="pricing-block__btn">Buy Now</a>
+                <a href="#" class="pricing-block__btn">Приобрести</a>
               </div>
               <div class="pricing-block">
-                <p class="pricing-block__uppertitle">ONE DAY TRAINING</p>
-                <h3 class="pricing-block__price">Free</h3>
+                <p class="pricing-block__uppertitle">Корпоративный</p>
+                <h3 class="pricing-block__price">
+                  8000
+                  <span>р/мес</span>
+                </h3>
                 <ul class="pricing-block__list">
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
+                  <li class="pricing-block__prefs">Фитнес-тестирование</li>
+                  <li class="pricing-block__prefs">Инструктаж во всех залах</li>
+                  <li class="pricing-block__prefs">Посещение в любое время</li>
+                  <li class="pricing-block__prefs">Программа привилегий</li>
+                  <li class="pricing-block__prefs">Скидка 15% на СПА</li>
                 </ul>
-                <a href="#" class="pricing-block__btn">Buy Now</a>
+                <a href="#" class="pricing-block__btn">Приобрести</a>
               </div>
               <div class="pricing-block">
-                <p class="pricing-block__uppertitle">ONE DAY TRAINING</p>
-                <h3 class="pricing-block__price">Free</h3>
+                <p class="pricing-block__uppertitle">VIP</p>
+                <h3 class="pricing-block__price">
+                  10000
+                  <span>р/мес</span>
+                </h3>
                 <ul class="pricing-block__list">
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
-                  <li class="pricing-block__prefs">Lorem ipsum dolor sit amet</li>
+                  <li class="pricing-block__prefs">Фитнес-тестирование</li>
+                  <li class="pricing-block__prefs">Инструктаж во всех залах</li>
+                  <li class="pricing-block__prefs">Посещение в любое время</li>
+                  <li class="pricing-block__prefs">Привилегии от партнеров GYM</li>
+                  <li class="pricing-block__prefs">Скидка 20% на СПА</li>
                 </ul>
-                <a href="#" class="pricing-block__btn">Buy Now</a>
+                <a href="#" class="pricing-block__btn">Приобрести</a>
               </div>
             </div>
           </div>
@@ -88,8 +96,8 @@
         <div class="container">
           <div class="contacts__wrapper">
             <div class="contacts__text">
-              <h2 class="contacts__title">Have a question?</h2>
-              <p class="contacts__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, Please don’t hesitate to call our customer service!</p>
+              <h2 class="contacts__title">Есть вопросы?</h2>
+              <p class="contacts__subtitle">Мы рады ответить на любой ваш вопрос, выслушать ваше предложение или замечание.</p>
             </div>
             <a href="tel:9003429876" class="contacts__btn">1-900-342-9876</a>
           </div>
