--- a/src/_header.html
+++ b/src/_header.html
@@ -1,4 +1,4 @@
-<header class="header" id="header">
+<header class="header">
     <div class="header__top">
       <div class="container">
         <div class="header__top-inner">
@@ -46,7 +46,7 @@
     <div class="header__bottom">
       <div class="container">
         <div class="header__bottom-inner">
-          <a href="#" class="logo">
+          <a href="index.html" class="logo">
             <img src="img/logo.png" alt="logo">
           </a>
           <nav class="header__navbar">
@@ -87,7 +87,12 @@
               </li>
             </ul>
           </nav>
+          <div class="header__hamburger">
+            <div class="header__hamburger-line"></div>
+            <div class="header__hamburger-line"></div>
+            <div class="header__hamburger-line"></div>
+          </div>
         </div>
-       </div>
+      </div>
     </div>
 </header>
