--- a/src/class-single-cardio.html
+++ b/src/class-single-cardio.html
@@ -64,7 +64,7 @@
                   </a>
                 </div>
               </div>
-              <hr class="pilates-content__divide">
+              <div class="pilates-content__divide pilates-content__divide--first"></div>
               <div class="pilates-content__featured">
                 <p class="pilates-content__featured-title">
                   Преимущества
@@ -102,7 +102,7 @@
                   </li>
                 </ul>
               </div>
-              <hr class="pilates-content__divide">
+              <div class="pilates-content__divide"></div>
               <div class="pilates-content__pricing">
                 <p class="pilates-content__pricing-title">Цены</p>
                 <ul class="pilates-content__pricing-list">
