--- a/src/classes.html
+++ b/src/classes.html
@@ -23,14 +23,16 @@
             <img src="img/classes/kikboxing.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
               <h3 class="class-block__title">Кикбоксинг</h3>
-              <p class="class-block__subtitle">Кикбоксинг – это разновидность боевых искусств, где принято наносить удары и руками, и нижними конечностями.Этот вид спорта сочетает в себе восточные единоборства и классический бокс.</p>
+              <p class="class-block__subtitle">Кикбоксинг – это боевое искусство, где принято наносить удары и руками, и ногами.Cочетает в себе восточные единоборства и классический бокс.</p>
               <div class="class-block__trainer">
                 <img src="img/small/john.jpg" class="class-block__trainer-img">
                 <p class="class-block__spec">Тренер</p>
                 <p class="class-block__name">Джон Джонс</p>
                 <p class="class-block__text">Он же папа, мама, бабушка и дедушка</p>
-                <a href="#" class="class-block__btn">Читать</a>
-                <a href="timetable.html" class="class-block__btn class-block__btn--second">Расписание</a>
+                <div class="class-block__btns">
+                  <a href="#" class="class-block__btn">Читать</a>
+                  <a href="timetable.html" class="class-block__btn">Расписание</a>
+                </div>
               </div>
             </div>
           </div>
@@ -44,8 +46,10 @@
                 <p class="class-block__spec">Тренер</p>
                 <p class="class-block__name">Ребекка Смит</p>
                 <p class="class-block__text">Тренер, который отдает вам всего себя</p>
-                <a href="#" class="class-block__btn">Читать</a>
-                <a href="timetable.html" class="class-block__btn class-block__btn--second">Расписание</a>
+                <div class="class-block__btns">
+                  <a href="#" class="class-block__btn">Читать</a>
+                  <a href="timetable.html" class="class-block__btn">Расписание</a>
+                </div>
               </div>
             </div>
           </div>
@@ -59,8 +63,10 @@
                 <p class="class-block__spec">Тренер</p>
                 <p class="class-block__name">Марк Шторм</p>
                 <p class="class-block__text">Прокачаю вашу выносливость и силу.</p>
-                <a href="#" class="class-block__btn">Читать</a>
-                <a href="timetable.html" class="class-block__btn class-block__btn--second">Расписание</a>
+                <div class="class-block__btns">
+                  <a href="#" class="class-block__btn">Читать</a>
+                  <a href="timetable.html" class="class-block__btn">Расписание</a>
+                </div>
               </div>
             </div>
           </div>
@@ -75,8 +81,10 @@
                 <p class="class-block__name">Жасмин Паттер</p>
                 <p class="class-block__text">Заряжаю своих учеников энергией
                 </p>
-                <a href="#" class="class-block__btn">Читать</a>
-                <a href="timetable.html" class="class-block__btn class-block__btn--second">Расписание</a>
+                <div class="class-block__btns">
+                  <a href="#" class="class-block__btn">Читать</a>
+                  <a href="timetable.html" class="class-block__btn">Расписание</a>
+                </div>
               </div>
             </div>
           </div>
@@ -90,8 +98,10 @@
                 <p class="class-block__spec">Тренер</p>
                 <p class="class-block__name">Джэк Гудман</p>
                 <p class="class-block__text">Помогаю создать идеальное тело</p>
-                <a href="#" class="class-block__btn">Читать</a>
-                <a href="timetable.html" class="class-block__btn class-block__btn--second">Расписание</a>
+                <div class="class-block__btns">
+                  <a href="#" class="class-block__btn">Читать</a>
+                  <a href="timetable.html" class="class-block__btn">Расписание</a>
+                </div>
               </div>
             </div>
           </div>
@@ -105,8 +115,10 @@
                 <p class="class-block__spec">Тренер</p>
                 <p class="class-block__name">Дэми Мосс</p>
                 <p class="class-block__text">Научу давать всем сдачи</p>
-                <a href="#" class="class-block__btn">Читать</a>
-                <a href="timetable.html" class="class-block__btn class-block__btn--second">Расписание</a>
+                <div class="class-block__btns">
+                  <a href="#" class="class-block__btn">Читать</a>
+                  <a href="timetable.html" class="class-block__btn">Расписание</a>
+                </div>
               </div>
             </div>
           </div>
