--- a/src/timetable.html
+++ b/src/timetable.html
@@ -48,128 +48,131 @@
               </li>
             </ul>
           </nav>
-          <table class="main-table">
-            <tr class="main-table__days">
-              <th></th>
-              <th>Понедельник</th>
-              <th>Вторник</th>
-              <th>Среда</th>
-              <th>Четверг</th>
-              <th>Пятница</th>
-              <th>Суббота</th>
-              <th>Воскресенье</th>
-            </tr>
-            <tr class="main-table__name">
-              <td class="main-table__time">06:00 - 07:00</td>
-              <td>Аэробика - Зал A</td>
-              <td>Пилатес - Зал D</td>
-              <td>Аэробика - Зал A</td>
-              <td>Пилатес - Зал D</td>
-              <td>Аэробика - Зал A</td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr class="main-table__name">
-              <td class="main-table__time">07:00 - 08:00</td>
-              <td>Кикбоксинг - Зал B</td>
-              <td>Кроссфит - Зал B</td>
-              <td></td>
-              <td>Кикбоксинг - Зал B</td>
-              <td>Спиннинг- Зал D</td>
-              <td>Кроссфит - Зал B</td>
-              <td>Кикбоксинг - Зал B</td>
-            </tr>
-            <tr class="main-table__name">
-              <td class="main-table__time">08:00 - 9:00</td>
-              <td>Бокс - Зал C</td>
-              <td>Спиннинг - Зал D</td>
-              <td>Бокс - Зал C</td>
-              <td>Спиннинг - Зал D</td>
-              <td></td>
-              <td>Спиннинг- Зал D</td>
-              <td>Бокс - Зал C</td>
-            </tr>
-            <tr class="main-table__name">
-              <td class="main-table__time">09:00 - 10:00</td>
-              <td>Аэробика - Зал A</td>
-              <td></td>
-              <td>Аэробика - Зал A</td>
-              <td>Кроссфит - Зал B</td>
-              <td>Аэробика - Зал A</td>
-              <td></td>
-              <td>Спиннинг - Зал D</td>
-            </tr>
-            <tr class="main-table__name">
-              <td class="main-table__time">10:00 - 11:00</td>
-              <td>Пилатес - Зал D</td>
-              <td>Кроссфит - Зал B</td>
-              <td></td>
-              <td>Спиннинг - Зал D</td>
-              <td></td>
-              <td>Спиннинг - Зал D</td>
-              <td>Пилатес - Зал D</td>
-            </tr>
-            <tr class="main-table__name">
-              <td class="main-table__time">11:00 - 12:00</td>
-              <td>Бокс - Зал C</td>
-              <td>Пилатес - Зал D</td>
-              <td>Бокс - Зал C</td>
-              <td></td>
-              <td>Пилатес - Зал D</td>
-              <td></td>
-              <td>Кроссфит - Зал B</td>
-            </tr>
-            <tr class="main-table__name">
-              <td class="main-table__time">12:00 - 13:00</td>
-              <td></td>
-              <td>Кроссфит - Зал B</td>
-              <td></td>
-              <td>Кикбоксинг - Зал B</td>
-              <td></td>
-              <td>Спиннинг - Зал D</td>
-              <td>Спиннинг - Зал D</td>
-            </tr>
-            <tr class="main-table__name">
-              <td class="main-table__time">13:00 - 14:00</td>
-              <td></td>
-              <td>Кикбоксинг - Зал B</td>
-              <td></td>
-              <td>Кроссфит - Зал B</td>
-              <td></td>
-              <td></td>
-              <td>Кикбоксинг - Зал B</td>
-            </tr>
-            <tr class="main-table__name">
-              <td class="main-table__time">14:00 - 15:00</td>
-              <td>Аэробика - Зал A</td>
-              <td></td>
-              <td>Аэробика - Зал A</td>
-              <td></td>
-              <td>Спиннинг - Зал D</td>
-              <td>Аэробика - Зал A</td>
-              <td>Спиннинг - Зал D</td>
-            </tr>
-            <tr class="main-table__name">
-              <td class="main-table__time">15:00 - 16:00</td>
-              <td>Бокс - Зал C</td>
-              <td></td>
-              <td>Бокс - Зал C</td>
-              <td></td>
-              <td></td>
-              <td>Кроссфит - Зал B</td>
-              <td>Бокс - Зал C</td>
-            </tr>
-            <tr class="main-table__name">
-              <td class="main-table__time">16:00 - 17:00</td>
-              <td>Пилатес - Зал D</td>
-              <td>Кроссфит - Зал B</td>
-              <td></td>
-              <td></td>
-              <td>Спиннинг - Зал D</td>
-              <td></td>
-              <td>Спиннинг - Зал D</td>
-            </tr>
-          </table>
+          <div class="main-table__wrapper">
+            <table class="main-table">
+              <tr class="main-table__days">
+                <th></th>
+                <th>Понедельник</th>
+                <th>Вторник</th>
+                <th>Среда</th>
+                <th>Четверг</th>
+                <th>Пятница</th>
+                <th>Суббота</th>
+                <th>Воскресенье</th>
+              </tr>
+              <tr class="main-table__name">
+                <td class="main-table__time">06:00 - 07:00</td>
+                <td>Аэробика - Зал A</td>
+                <td>Пилатес - Зал D</td>
+                <td>Аэробика - Зал A</td>
+                <td>Пилатес - Зал D</td>
+                <td>Аэробика - Зал A</td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr class="main-table__name">
+                <td class="main-table__time">07:00 - 08:00</td>
+                <td>Кикбоксинг - Зал B</td>
+                <td>Кроссфит - Зал B</td>
+                <td></td>
+                <td>Кикбоксинг - Зал B</td>
+                <td>Спиннинг- Зал D</td>
+                <td>Кроссфит - Зал B</td>
+                <td>Кикбоксинг - Зал B</td>
+              </tr>
+              <tr class="main-table__name">
+                <td class="main-table__time">08:00 - 9:00</td>
+                <td>Бокс - Зал C</td>
+                <td>Спиннинг - Зал D</td>
+                <td>Бокс - Зал C</td>
+                <td>Спиннинг - Зал D</td>
+                <td></td>
+                <td>Спиннинг- Зал D</td>
+                <td>Бокс - Зал C</td>
+              </tr>
+              <tr class="main-table__name">
+                <td class="main-table__time">09:00 - 10:00</td>
+                <td>Аэробика - Зал A</td>
+                <td></td>
+                <td>Аэробика - Зал A</td>
+                <td>Кроссфит - Зал B</td>
+                <td>Аэробика - Зал A</td>
+                <td></td>
+                <td>Спиннинг - Зал D</td>
+              </tr>
+              <tr class="main-table__name">
+                <td class="main-table__time">10:00 - 11:00</td>
+                <td>Пилатес - Зал D</td>
+                <td>Кроссфит - Зал B</td>
+                <td></td>
+                <td>Спиннинг - Зал D</td>
+                <td></td>
+                <td>Спиннинг - Зал D</td>
+                <td>Пилатес - Зал D</td>
+              </tr>
+              <tr class="main-table__name">
+                <td class="main-table__time">11:00 - 12:00</td>
+                <td>Бокс - Зал C</td>
+                <td>Пилатес - Зал D</td>
+                <td>Бокс - Зал C</td>
+                <td></td>
+                <td>Пилатес - Зал D</td>
+                <td></td>
+                <td>Кроссфит - Зал B</td>
+              </tr>
+              <tr class="main-table__name">
+                <td class="main-table__time">12:00 - 13:00</td>
+                <td></td>
+                <td>Кроссфит - Зал B</td>
+                <td></td>
+                <td>Кикбоксинг - Зал B</td>
+                <td></td>
+                <td>Спиннинг - Зал D</td>
+                <td>Спиннинг - Зал D</td>
+              </tr>
+              <tr class="main-table__name">
+                <td class="main-table__time">13:00 - 14:00</td>
+                <td></td>
+                <td>Кикбоксинг - Зал B</td>
+                <td></td>
+                <td>Кроссфит - Зал B</td>
+                <td></td>
+                <td></td>
+                <td>Кикбоксинг - Зал B</td>
+              </tr>
+              <tr class="main-table__name">
+                <td class="main-table__time">14:00 - 15:00</td>
+                <td>Аэробика - Зал A</td>
+                <td></td>
+                <td>Аэробика - Зал A</td>
+                <td></td>
+                <td>Спиннинг - Зал D</td>
+                <td>Аэробика - Зал A</td>
+                <td>Спиннинг - Зал D</td>
+              </tr>
+              <tr class="main-table__name">
+                <td class="main-table__time">15:00 - 16:00</td>
+                <td>Бокс - Зал C</td>
+                <td></td>
+                <td>Бокс - Зал C</td>
+                <td></td>
+                <td></td>
+                <td>Кроссфит - Зал B</td>
+                <td>Бокс - Зал C</td>
+              </tr>
+              <tr class="main-table__name">
+                <td class="main-table__time">16:00 - 17:00</td>
+                <td>Пилатес - Зал D</td>
+                <td>Кроссфит - Зал B</td>
+                <td></td>
+                <td></td>
+                <td>Спиннинг - Зал D</td>
+                <td></td>
+                <td>Спиннинг - Зал D</td>
+              </tr>
+            </table>
+          </div>
+          
         </div>
       </div>
     </section>
